# Think-Chair

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  rag_qa_20.json  test_main.py
.agents/: AGENTS.md
.hermes/plans/: 2026-07-01_142505-draftsmith.md  2026-07-02_draftsmith-remaining.md
app/: logging.py  main.py
app/api/: endpoints.py
app/core/: auth_deps.py  chinese_filter.py  config.py  database.py  error_handlers.py  exceptions.py  hanja_filter.py  llm.py  retry.py  security.py  storage.py  vectorstore.py
app/graph/: builder.py  chat_graph_runner.py  checkpointer.py  conversation_state.py  llm_registry.py  state.py  transcript.py
app/models/: __init__.py  chat.py  history.py  manuscript.py  user.py
app/pages/: auth_pages.py  chat_pages.py  debug_pages.py  user_interface.py  workspace_pages.py
app/repositories/: chat_repo.py  manuscript_repo.py
app/schemas/: auth.py  manuscript.py  rag.py
app/services/: auth_service.py  background_tasks.py  chat_service.py  chunking.py  document.py  document_evaluation_service.py  evaluation_response_parser.py  evaluator.py  manuscript_service.py  rag.py  sufficiency_response_parser.py
app/templates/: base.html  chat.html  jinja.py
app/utils/: sse.py
docs/: ec2-deploy.md
tests/: conftest.py  helpers.py  test_app.py  test_auth.py  test_chat_api.py  test_chat_flow.py  test_chinese_filter.py  test_evaluation.py  test_evaluator.py  test_graph_build.py  test_graph_nodes.py  test_hanja_filter.py  test_history.py  test_manuscript.py  test_manuscript_repo.py  test_manuscript_service.py  test_prompt_builder.py  test_query.py  test_rag_quality.py  test_security.py  test_storage_local.py  test_upload.py  test_workspace_pages.py
tests/e2e/: test_chat_flow.py  test_workspace_reload.py
tests/integration/: test_auth.py  test_chat_api.py  (+3 more)
회고/: 10주차 회고.md  7주차 회고.md  8주차 회고.md
(+97 files in other folders)
