[project]
name = "01"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.137.1",
    "google-genai>=2.8.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-chroma>=0.1.4",
    "langchain-google-genai>=2.0.0",
    "pytest>=9.1.1",
]
