[project]
name = "01"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.137.1",
    "google-genai>=2.8.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0,<0.4.2",
    "langchain-chroma>=0.1.4",
    "langchain-google-genai>=2.0.0",
    "pytest>=9.1.1",
    "pypdf>=5.0.0",
    "python-multipart>=0.0.9",
    "langchain-openai>=0.1.0",
    "kiwipiepy>=0.23.2",
    "ragas>=0.2.0",
    "sqlalchemy>=2.0.51",
    "black>=26.5.1",
    "langsmith>=0.9.0",
    "langchain-google-vertexai>=3.2.4",
]



