[project]
name = "01"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.137.1",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
    "pytest>=9.1.1",
    "python-multipart>=0.0.9",
    "langchain-openai>=0.1.0",
    "sqlalchemy>=2.0.51",
    "black>=26.5.1",
    "langsmith>=0.9.0",
    "langchain-google-vertexai>=3.2.4",
    "pyjwt>=2.13.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "langchain-core>=1.4.8",
    "langgraph>=1.2.6",
    "sse-starlette>=3.4.5",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
markers = [
    "unit: 순수 함수·DB 단위 테스트 (HTTP/그래프 미사용)",
    "integration: TestClient 단건 요청 수준의 API·렌더링 테스트",
    "e2e: AsyncClient 기반 다단계 전체 흐름 테스트",
]
